# hand_control

./: CMakeLists.txt  GUI.hpp  Settings.hpp  SystemInteraction.hpp  main.cpp
cmake/: FindHandDetector.cmake
